# langChain

./: .env.example  main.py  pyproject.toml  session.py
rag/: Event.py  Event_Search.py  agent.py  event_lookup.py  ingest_events.py  llm_chain.py  llm_chain_search.py  llm_router_chain.py  prompt.txt  prompt_search.txt  search_events.py  state.py
rag/data/: popular.json
